--- a/PRAKTIKUM06/Praktikum 6.3_0110221123_Hanifa Rahmani Virdynata.html
+++ b/PRAKTIKUM06/Praktikum 6.3_0110221123_Hanifa Rahmani Virdynata.html
@@ -8,6 +8,7 @@
     <style>
         nav,header,footer,article,aside{
             text-align: center; 
+            font-family: sans-serif;
             color: white; 
             margin: 10px; 
             justify-content: center;
