--- a/TUGAS PEKAN 11/4. Image Picker/index.html
+++ b/TUGAS PEKAN 11/4. Image Picker/index.html
@@ -6,28 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Picker</title>
     <style>
-    .container{
-        width: 600px;
+    #gambar{
+        width: 500px;
+        height: 300px;
         padding: 10px;
     }
     </style>
 </head>
 <body>
-    <select onchange="hasil()" id="hewan">
-        <option value="Pilih hewan"></option>
-        <option id="kelinci" value="Kelinci">Kelinci</option>
-        <option id="beruangKutub" value="Beruang Kutub">Beruang Kutub</option>
-        <option id="flamingo" value="Flamingo">Flamingo</option>
-        <option id="pandaMerah" value="Panda Merah">Panda Merah</option>
-        <option id="kuda" value="Kuda">Kuda</option>
-        <option id="rusa" value="Rusa">Rusa</option>
-        <option id="harimau" value="Harimau">Harimau</option>
-        <option id="kura-kura" value="Kura-Kura">Kura-Kura</option>
-        <option id="merak" value="Merak">Merak</option>
-    </select>
-    <div class="container">
-        <div id="gambar"></div>
+    <div>
+        <select onchange="hasil()" id="hewan">
+            <option value="Pilih hewan"></option>
+            <option id="kelinci" value="kelinci">Kelinci</option>
+            <option id="beruangKutub" value="Beruang Kutub">Beruang Kutub</option>
+            <option id="flamingo" value="Flamingo">Flamingo</option>
+            <option id="pandaMerah" value="Panda Merah">Panda Merah</option>
+            <option id="kuda" value="Kuda">Kuda</option>
+            <option id="rusa" value="Rusa">Rusa</option>
+            <option id="harimau" value="Harimau">Harimau</option>
+            <option id="kuraKura" value="Kura-Kura">Kura-Kura</option>
+            <option id="merak" value="Merak">Merak</option>
+        </select>
     </div>
+    <div>
+        <img id="gambar">
+    </div>
+
 
     <script src="script.js"></script>
 </body>
