--- a/TUGAS PEKAN 11/5. Form Validation/index.html
+++ b/TUGAS PEKAN 11/5. Form Validation/index.html
@@ -10,31 +10,35 @@
 </head>
 <body>
     <div class="form-container">
-        <form action="" method="POST">
+        <form action="" method="POST" onsubmit="return tiket()">
             <h1>Form</h1>
             <div class="container">
                 <label>Nama Pelanggan</label>
-                <input type="text" name="name" id="nama" maxlength="30">
+                <input type="text" name="nama" id="nama" maxlength="30" required>
                 <label>Email </label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
                 <label>Jam Keberangkatan</label>
-                <input type="time" name="" id="jam">
+                <input type="time" name="jam" id="jam" required>
                 <br />
                 <label>Tujuan Keberangkatan</label>
-                <input type="text" name="tujuan" id="tujuan">
+                <input type="text" name="tujuan" id="tujuan" required>
                 <label>Jumlah Tiket</label>
-                <input type="number" name="tiket" id="tiket" max="10">
+                <input type="number" name="tiket" id="tiket" min="1" max="10" required>
             </div>
+            <button type="submit">Submit</button>
         </form>
-        <button onclick="tiket()">Submit</button>
-    
-    <div class="container_hasil">
-        <h1 id="hasil"></h1>
-        <p id="hasil_nama"></p>
-        <p id="hasil_email"></p>
-        <p id="hasil_jam"></p>
-        <p id="hasil_tujuan"></p>
-        <p id="hasil_tiket"></p>
+        <button onclick="tiket()">Cetak</button>
+        <div class="container_hasil" role="alert">
+            <h1 id="hasil"></h1>
+            <p id="hasil_nama"></p>
+            <p id="hasil_email"></p>
+            <p id="hasil_jam"></p>
+            <p id="hasil_tujuan"></p>
+            <p id="hasil_tiket"></p>
+        </div>
     </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
